# dtce-ai-bot

./: .deployment  .env.example  .gitignore  ALTERNATIVE_DEPLOYMENT.md  AZURE_DEPLOYMENT.md  AZURE_SEARCH_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_SETUP.md  LICENSE  MVP_TESTING_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  Procfile  QUESTIONS.TXT  README.md  SIMPLE_DEPLOYMENT.md  TEST_RESULTS.md  TEST_RESULTS_SUMMARY.py  TIMESHEET_VALIDATION.md  app.py  application.py  azure_branch_config.sh  batch_update_all.py  check_225_content.py  check_all_document_content.py  check_index_config.py  check_indexer_config.py  check_indexer_status.py  check_method.py  check_project_225.py  check_templates_in_index.py  cleanup_structure.py  debug_auth.py  debug_azure_components.py  debug_azure_search.py  debug_blob_urls.py  debug_code_paths.py  debug_document_links.py  debug_env.py  (+145 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-deploy.yml  ci.yml
config/: env.example  pre-commit-config.yaml
demo_files/: dtce_auth_docs.md  engineering_metrics.py  project_config.json
deployment/: deploy.py  setup-azure.sh  start_mvp_test.sh
deployment/docs/: ALTERNATIVE_DEPLOYMENT.md  AZURE_DEPLOYMENT.md  DEPLOY_TO_AZURE.md  SIMPLE_DEPLOYMENT.md
docs/: ASYNC_SYNC_GUIDE.md  CODE_WALKTHROUGH.md  CONVERSATIONAL_CHATBOT_UPDATE.md  FIX_COMPREHENSIVE_PROJECT_LISTS.md  FIX_TIME_BASED_QUERY_INCONSISTENCY.md  PROJECT_INFO.md  PROJECT_SCOPING_FEATURE.md  RAG_ARCHITECTURE_V2.md  RESTRUCTURE_COMPLETE.md  SEARCH_FLOW_EXPLAINED.md  SETUP.md  TEMPLATES_SYNC_SAFETY.md  instructions.txt  url-centralization.md
docs/api/: API.md  README.md  document-sync.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: DEPLOYMENT.md
docs/examples/: example_project_questions.txt
docs/rag/: RAG.TXT
docs/security/: SECURITY.md
docs/teams/: README.md
docs/testing/: TESTING.md
dtce_ai_bot/: __init__.py  __main__.py  main.py
dtce_ai_bot/api/: documents.py  health.py  project_scoping.py
dtce_ai_bot/bot/: __init__.py  endpoints.py  teams_bot.py
dtce_ai_bot/config/: __init__.py  legacy_config.py  settings.py
dtce_ai_bot/core/: __init__.py  app.py  document_processor.py  rag_system.py
dtce_ai_bot/integrations/: __init__.py  azure_search.py  azure_storage.py  microsoft_graph.py
dtce_ai_bot/models/: __init__.py  document.py  documents.py  legacy_models.py  project.py  search.py  sync_job.py
dtce_ai_bot/rag/: __init__.py  chunker.py  config.py  dtce_retriever.py  embedder.py  generator.py  indexer.py  pipeline.py  retriever.py
dtce_ai_bot/services/: __init__.py  advanced_rag_handler.py  azure_rag_service.py  azure_rag_service_v2.py  client_relationship_handler.py  conversation_context.py  conversation_context_simple.py  document_formatter.py  document_processor.py  document_qa.py  document_qa_OLD_BACKUP.py  document_qa_clean.py  document_sync_service.py  documents.py  dtce_database.py  enhanced_engineering_rag.py  enhanced_rag_pipeline.py  folder_structure_service.py  google_docs_service.py  google_sheets_knowledge.py  intelligent_query_router.py  intent_classifier.py  (+24 more)
examples/: rag_usage.py
scripts/: bulk_index_blobs.py  check_index_config.py  demo_script.py  emergency_reindex.py  fast_reindex.py  fix_metadata.py  index_templates_from_blob.py  index_templates_only.py  legacy_main.py  legacy_setup.py  reindex_documents.py  reindex_drawings.py  reindex_emails.py  reindex_excel.py  reindex_pdfs.py  reindex_production.py  reindex_text.py  reindex_word.py  restart_azure_service.sh  run_dev.sh  run_parallel_reindex.py  safe_index_templates.py  setup_azure.sh  setup_dev.sh  setup_teams.py  start.sh  sync_templates_drive.py  sync_templates_folder.py  test_azure_search.py  test_pipeline.py  update_index_semantic.py
static/: test.html
teams/: VALIDATION_NOTES_v1.3.0.md  manifest.json
teams-app/: manifest.json
teams-package/: manifest.json
tests/: conftest.py  debug_ai_prompt.py  debug_api.py  debug_qa_service.py  debug_retrieved_content.py  debug_wellness_inconsistency.py  example_client_response.py  integration_example.py  test_advanced_engineering_scenarios.py  test_all_rag_questions.py  test_client_recognition.py  test_comprehensive.py  test_comprehensive_smart_routing.py  test_conversation_flow.py  test_deployed_bot.py  test_direct_search.py  test_doc_formatting.py  test_dtce_project_queries.py  test_enhanced_client_handler.py  test_enhanced_engineering_rag.py  test_folder_structure.py  test_full_rag.py  test_functional.py  test_intelligent_routing.py  test_intent_recognition.py  test_natural_language_understanding.py  test_non_superseded.py  test_phantom_fix.py  test_rag_implementation.py  test_rag_v2.py  test_router_natural_language.py  test_simplified_rag.py  test_smart_rag_fix.py  test_synonym_detection.py  test_url_debug.py
tools/: connect-to-github.sh  github-setup.sh  reorganize.py
(+41 files in other folders)
